# flatbuffers_demo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  daily_ci.yaml  linux-ci.yaml  push_ci.yaml
src/: CMakeLists.txt  flatbuffers_demo.cpp  monster.fbs
tests/: CMakeLists.txt  hello_gtest.cpp
